page sport de compétition v1

--- a/Tout_parcourir.html
+++ b/Tout_parcourir.html
@@ -35,7 +35,7 @@
                 <p>Pratiquez votre sport favori en compétition avec nos équipes et tournois organisés. Encadrement professionnel pour progresser et performer.</p>
                 <p><strong>Exemples :</strong> Football, Basketball, Tennis, Rugby, Volley</p>
             </div>
-            <a href="sports-competition.html" class="btn-category">Découvrir les sports</a>
+            <a href="sport_competition.html" class="btn-category">Découvrir les sports</a>
         </article>
         
         <article class="category-card">
