--- a/Accueil.html
+++ b/Accueil.html
@@ -16,7 +16,7 @@
         <a href="Tout_parcourir.html" class="active">Tout parcourir</a>
         <a href="recherche.html">Recherche</a>
         <a href="rendez-vous.html">Rendez-vous</a>
-        <a href="votre-compte.html">Votre compte</a>
+        <a href="Votre_compte.html">Votre compte</a>
     </nav>
     
     <div class="carousel-container">
