--- a/sport_competition.html
+++ b/sport_competition.html
@@ -80,9 +80,34 @@
     .close:hover {
       color: #000;
     }
+
+    .back-arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: #1c66af;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.back-arrow:hover {
+  color: #0d4b8a;
+}
+
+.back-arrow::before {
+  content: "←";
+  margin-right: 8px;
+  font-size: 1.5rem;
+}
+
   </style>
 </head>
 <body>
+  <a href="Tout_parcourir.html" class="back-arrow">Retour</a>
   <h1>Nos Sports de Compétition</h1>
   <div class="sports-grid">
     <div class="sport-card" onclick="openModal('basketball')">
