ajout de connexion au compte

--- a/sport_competition.html
+++ b/sport_competition.html
@@ -107,7 +107,7 @@
   </style>
 </head>
 <body>
-  <a href="Tout_parcourir.html" class="back-arrow">Retour</a>
+  <a href="Tout_parcourir.php" class="back-arrow">Retour</a>
   <h1>Nos Sports de Compétition</h1>
   <div class="sports-grid">
     <div class="sport-card" onclick="openModal('basketball')">
